[package]
name = "health-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name="health_checker"
# path="src/lib.rs"
# [dependencies]
# tokio = { version = "1", features = ["full"] }
# mini-redis = "0.4"
[dependencies]
futures = "0.3"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

