[package]
name = "health-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum="0.6.18"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
lettre = "0.10"
reqwest = { version = "0.11", features = ["json"] }



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name="health_checker"
# path="src/lib.rs"
# [dependencies]
# tokio = { version = "1", features = ["full"] }
# mini-redis = "0.4"
# [dependencies]
# futures = "0.3"
#
# [dependencies.async-std]
# version = "1.6"
# features = ["attributes"]
#
